完成了视频用户互动的操作，修复了些许bug